--- a/StockAnalysis/Login/LoginViewController.xib
+++ b/StockAnalysis/Login/LoginViewController.xib
@@ -133,6 +133,9 @@
                     <state key="normal" title="忘记密码">
                         <color key="titleColor" red="0.2156862745" green="0.2156862745" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="clickForgetPassword:" destination="-1" eventType="touchUpInside" id="2Pl-GM-Ble"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
