--- a/StockAnalysis/Login/LoginViewController.xib
+++ b/StockAnalysis/Login/LoginViewController.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
+                <outlet property="countryCodeButton" destination="emg-wb-7QF" id="2p0-CA-S28"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,14 +21,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Gnn-q2-hpc">
-                    <rect key="frame" x="158" y="75" width="59" height="59"/>
+                    <rect key="frame" x="158" y="55" width="59" height="59"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="59" id="EMb-tP-ftI"/>
                         <constraint firstAttribute="height" constant="59" id="quB-ux-1MP"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ZEDA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lbw-Ae-s1J">
-                    <rect key="frame" x="150" y="135" width="79" height="32"/>
+                    <rect key="frame" x="150" y="115" width="79" height="32"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="4qA-L3-8Rc"/>
                         <constraint firstAttribute="width" constant="79" id="VD6-Ph-Z6L"/>
@@ -38,7 +38,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qzo-MG-jE9">
-                    <rect key="frame" x="0.0" y="240" width="375" height="107"/>
+                    <rect key="frame" x="0.0" y="220" width="375" height="107"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QFC-dN-nAW" userLabel="line">
                             <rect key="frame" x="37" y="36" width="301" height="1"/>
@@ -48,23 +48,17 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emg-wb-7QF">
-                            <rect key="frame" x="37" y="7" width="30" height="30"/>
+                            <rect key="frame" x="37" y="7" width="54" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="30" id="v29-jB-grl"/>
+                                <constraint firstAttribute="width" constant="54" id="v29-jB-grl"/>
                             </constraints>
-                            <state key="normal" title="+86">
+                            <state key="normal" title="+1026">
                                 <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="clickCountryCode:" destination="-1" eventType="touchDown" id="TDR-SC-s1f"/>
+                            </connections>
                         </button>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7T-iv-6XE">
-                            <rect key="frame" x="75" y="8" width="263" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="2oL-l5-ga4"/>
-                            </constraints>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                        </textField>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvR-1i-5U1">
                             <rect key="frame" x="37" y="76" width="31" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -86,6 +80,15 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7T-iv-6XE">
+                            <rect key="frame" x="99" y="7" width="239" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="2oL-l5-ga4"/>
+                            </constraints>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                        </textField>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -93,7 +96,7 @@
                         <constraint firstItem="QFC-dN-nAW" firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="top" constant="36" id="37P-XK-XHy"/>
                         <constraint firstAttribute="height" constant="107" id="3p0-9Z-LuF"/>
                         <constraint firstItem="JqC-km-vbC" firstAttribute="leading" secondItem="QFC-dN-nAW" secondAttribute="leading" id="5ut-os-cvP"/>
-                        <constraint firstItem="f7T-iv-6XE" firstAttribute="leading" secondItem="emg-wb-7QF" secondAttribute="leading" constant="38" id="8em-xF-R7r"/>
+                        <constraint firstItem="f7T-iv-6XE" firstAttribute="leading" secondItem="emg-wb-7QF" secondAttribute="leading" constant="54" id="8em-xF-R7r"/>
                         <constraint firstItem="emg-wb-7QF" firstAttribute="leading" secondItem="QFC-dN-nAW" secondAttribute="leading" id="A28-tY-dGz"/>
                         <constraint firstItem="f7T-iv-6XE" firstAttribute="trailing" secondItem="QFC-dN-nAW" secondAttribute="trailing" id="UuU-FW-cW3"/>
                         <constraint firstItem="QFC-dN-nAW" firstAttribute="leading" secondItem="qzo-MG-jE9" secondAttribute="leading" constant="37" id="dIF-uy-kCr"/>
@@ -104,7 +107,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7vX-CO-YBv">
-                    <rect key="frame" x="37" y="409" width="301" height="35"/>
+                    <rect key="frame" x="37" y="389" width="301" height="35"/>
                     <color key="backgroundColor" red="0.14509803921568626" green="0.17254901960784313" blue="0.19607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="0KA-cv-38u"/>
@@ -115,7 +118,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VKy-fx-ljx">
-                    <rect key="frame" x="57" y="449" width="92" height="30"/>
+                    <rect key="frame" x="57" y="429" width="92" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="92" id="Poo-HZ-T4l"/>
                         <constraint firstAttribute="height" constant="30" id="q9X-ab-x69"/>
@@ -123,9 +126,12 @@
                     <state key="normal" title="使用邮箱登录">
                         <color key="titleColor" red="0.2156862745" green="0.2156862745" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="clickMailRegist:" destination="-1" eventType="touchDown" id="p4q-Uj-nC4"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iwy-Li-NvR">
-                    <rect key="frame" x="256" y="449" width="62" height="30"/>
+                    <rect key="frame" x="256" y="429" width="62" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="jfE-Xk-2u1"/>
                         <constraint firstAttribute="width" constant="62" id="uvd-0h-5nl"/>
@@ -140,22 +146,21 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="top" secondItem="Gnn-q2-hpc" secondAttribute="top" constant="-55" id="5bs-cT-X95"/>
-                <constraint firstItem="qzo-MG-jE9" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="7aW-af-0X7"/>
+                <constraint firstAttribute="top" secondItem="Gnn-q2-hpc" secondAttribute="top" constant="-55" id="5bs-cT-X95"/>
+                <constraint firstItem="qzo-MG-jE9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="7aW-af-0X7"/>
                 <constraint firstItem="Iwy-Li-NvR" firstAttribute="trailing" secondItem="7vX-CO-YBv" secondAttribute="trailing" constant="-20" id="8DY-Ng-VFh"/>
                 <constraint firstItem="VKy-fx-ljx" firstAttribute="top" secondItem="7vX-CO-YBv" secondAttribute="top" constant="40" id="AhW-du-s6F"/>
                 <constraint firstItem="VKy-fx-ljx" firstAttribute="leading" secondItem="7vX-CO-YBv" secondAttribute="leading" constant="20" id="B6U-E4-0F4"/>
-                <constraint firstItem="qzo-MG-jE9" firstAttribute="width" secondItem="Q5M-cg-NOt" secondAttribute="width" id="EkN-65-AnA"/>
+                <constraint firstItem="qzo-MG-jE9" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="EkN-65-AnA"/>
                 <constraint firstItem="7vX-CO-YBv" firstAttribute="leading" secondItem="qzo-MG-jE9" secondAttribute="leading" constant="37" id="PRI-OP-0Qa"/>
                 <constraint firstItem="7vX-CO-YBv" firstAttribute="trailing" secondItem="qzo-MG-jE9" secondAttribute="trailing" constant="-37" id="TRg-X1-nOb"/>
                 <constraint firstItem="Iwy-Li-NvR" firstAttribute="top" secondItem="7vX-CO-YBv" secondAttribute="top" constant="40" id="eRS-TL-J2B"/>
                 <constraint firstItem="7vX-CO-YBv" firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="62" id="efC-5J-wkK"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="-327" id="o4a-7q-xOU"/>
-                <constraint firstItem="Gnn-q2-hpc" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="oS7-x6-Sqp"/>
+                <constraint firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="-327" id="o4a-7q-xOU"/>
+                <constraint firstItem="Gnn-q2-hpc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="oS7-x6-Sqp"/>
                 <constraint firstItem="lbw-Ae-s1J" firstAttribute="centerX" secondItem="Gnn-q2-hpc" secondAttribute="centerX" constant="2" id="qtq-Ds-l8y"/>
                 <constraint firstItem="lbw-Ae-s1J" firstAttribute="top" secondItem="Gnn-q2-hpc" secondAttribute="top" constant="60" id="x8H-Xx-WRL"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
