--- a/StockAnalysis/Login/RegistViewController.xib
+++ b/StockAnalysis/Login/RegistViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegistViewController">
             <connections>
+                <outlet property="countryCodeButton" destination="6YM-lR-B2X" id="pgv-IH-dRg"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -66,9 +67,12 @@
                         <constraint firstAttribute="width" constant="82" id="lgD-bR-bs8"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <state key="normal" title="手机号注册">
+                    <state key="normal" title="邮箱注册">
                         <color key="titleColor" red="0.2156862745" green="0.2156862745" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="clickMainRegist:" destination="-1" eventType="touchDown" id="LRx-l1-YAJ"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sDg-Q8-tYi">
                     <rect key="frame" x="0.0" y="255" width="375" height="176"/>
@@ -81,16 +85,19 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6YM-lR-B2X">
-                            <rect key="frame" x="37" y="7" width="40" height="30"/>
+                            <rect key="frame" x="37" y="7" width="60" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="40" id="Ou8-5n-awP"/>
+                                <constraint firstAttribute="width" constant="60" id="Ou8-5n-awP"/>
                             </constraints>
-                            <state key="normal" title="邮箱">
+                            <state key="normal" title="+86">
                                 <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="clickCountryCode:" destination="-1" eventType="touchDown" id="WUa-dk-vXx"/>
+                            </connections>
                         </button>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jmV-dU-bPL">
-                            <rect key="frame" x="75" y="8" width="263" height="30"/>
+                            <rect key="frame" x="105" y="8" width="233" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="e2M-MO-C0s"/>
                             </constraints>
@@ -108,11 +115,11 @@
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DeD-Sd-7Hc">
                             <rect key="frame" x="261" y="76" width="77" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="发送邀请码">
+                            <state key="normal" title="发送验证码">
                                 <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
-                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="邮箱邀请码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jYf-P3-7NK">
+                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="短信验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jYf-P3-7NK">
                             <rect key="frame" x="37" y="77" width="216" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <nil key="textColor"/>
@@ -155,7 +162,7 @@
                         <constraint firstItem="jmV-dU-bPL" firstAttribute="trailing" secondItem="aah-wR-lum" secondAttribute="trailing" id="iRv-HI-iwb"/>
                         <constraint firstAttribute="height" constant="176" id="mrd-6Y-iSs"/>
                         <constraint firstItem="OIi-o7-wie" firstAttribute="trailing" secondItem="aah-wR-lum" secondAttribute="trailing" id="o1c-38-NvA"/>
-                        <constraint firstItem="jmV-dU-bPL" firstAttribute="leading" secondItem="6YM-lR-B2X" secondAttribute="leading" constant="38" id="q4U-ts-6iD"/>
+                        <constraint firstItem="jmV-dU-bPL" firstAttribute="leading" secondItem="6YM-lR-B2X" secondAttribute="leading" constant="68" id="q4U-ts-6iD"/>
                         <constraint firstItem="QcW-8G-c5p" firstAttribute="leading" secondItem="aah-wR-lum" secondAttribute="leading" id="xMj-He-wBF"/>
                         <constraint firstItem="aah-wR-lum" firstAttribute="leading" secondItem="sDg-Q8-tYi" secondAttribute="leading" constant="37" id="y01-xH-JzF"/>
                     </constraints>
