--- a/StockAnalysis/Exchange/ExchangeViewController.xib
+++ b/StockAnalysis/Exchange/ExchangeViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -29,7 +29,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nl4-JD-v9o">
-                    <rect key="frame" x="16" y="14" width="343" height="144"/>
+                    <rect key="frame" x="16" y="41" width="343" height="117"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="交易资产估值" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgs-qR-mVe">
                             <rect key="frame" x="111" y="14" width="121" height="21"/>
@@ -65,10 +65,10 @@
                         <constraint firstItem="Nq9-uS-XAb" firstAttribute="centerX" secondItem="Nl4-JD-v9o" secondAttribute="centerX" id="5IS-a7-O3g"/>
                         <constraint firstItem="joF-NK-Au7" firstAttribute="centerX" secondItem="Nl4-JD-v9o" secondAttribute="centerX" id="H3t-5z-o9b"/>
                         <constraint firstItem="joF-NK-Au7" firstAttribute="top" secondItem="tgs-qR-mVe" secondAttribute="bottom" constant="8" id="OZU-ym-NzQ"/>
-                        <constraint firstItem="tgs-qR-mVe" firstAttribute="top" secondItem="Nl4-JD-v9o" secondAttribute="topMargin" id="SsQ-qo-QQG"/>
+                        <constraint firstItem="tgs-qR-mVe" firstAttribute="top" secondItem="Nl4-JD-v9o" secondAttribute="topMargin" constant="6" id="SsQ-qo-QQG"/>
                         <constraint firstItem="tgs-qR-mVe" firstAttribute="centerX" secondItem="Nq9-uS-XAb" secondAttribute="centerX" id="lUg-Bk-PoJ"/>
                         <constraint firstItem="Nq9-uS-XAb" firstAttribute="top" secondItem="Nl4-JD-v9o" secondAttribute="top" constant="86" id="tDY-DT-Nht"/>
-                        <constraint firstAttribute="height" constant="144" id="ygL-pe-6rj"/>
+                        <constraint firstAttribute="height" constant="117" id="ygL-pe-6rj"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -129,10 +129,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2y8-a0-FV1" userLabel="资金">
-                    <rect key="frame" x="189" y="157" width="95" height="83"/>
+                    <rect key="frame" x="189" y="157" width="95.5" height="83"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QXh-Nc-5eD">
-                            <rect key="frame" x="0.0" y="0.0" width="95" height="83"/>
+                            <rect key="frame" x="0.0" y="0.0" width="95.5" height="83"/>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="huazhuan" translatesAutoresizingMaskIntoConstraints="NO" id="rsM-cb-tE1">
                             <rect key="frame" x="27" y="14" width="40" height="37"/>
@@ -155,10 +155,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vzb-DH-e65" userLabel="账单">
-                    <rect key="frame" x="280" y="157" width="95" height="83"/>
+                    <rect key="frame" x="280.5" y="157" width="94.5" height="83"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UDm-oa-Ox2">
-                            <rect key="frame" x="0.0" y="0.0" width="95" height="83"/>
+                            <rect key="frame" x="0.0" y="0.0" width="94.5" height="83"/>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="交易账单" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRY-8W-cSx">
                             <rect key="frame" x="17" y="57" width="61" height="21"/>
@@ -181,14 +181,39 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fYb-TW-Wpn">
-                    <rect key="frame" x="0.0" y="284" width="375" height="383"/>
+                    <rect key="frame" x="0.0" y="325" width="375" height="342"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FDh-ju-ZMy">
+                    <rect key="frame" x="0.0" y="272" width="375" height="45"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="资产明细" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d6i-K5-hFw">
+                            <rect key="frame" x="8" y="16" width="58" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="guM-hf-6hE">
+                            <rect key="frame" x="233" y="7" width="49" height="31"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                        </switch>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="隐藏0余额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxR-Jj-bp2">
+                            <rect key="frame" x="288" y="18" width="57" height="15"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="23C-ay-5WQ" secondAttribute="trailing" id="0Ya-EA-ZAP"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="top" secondItem="Nl4-JD-v9o" secondAttribute="top" constant="6" id="1qr-aX-G4w"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="top" secondItem="Nl4-JD-v9o" secondAttribute="top" constant="-21" id="1qr-aX-G4w"/>
                 <constraint firstItem="Vzb-DH-e65" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="137" id="22X-cV-bw9"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="fYb-TW-Wpn" secondAttribute="trailing" id="30r-kX-4yT"/>
                 <constraint firstItem="jKe-gE-l6t" firstAttribute="width" secondItem="cYH-nJ-CJY" secondAttribute="width" id="3e1-g6-0al"/>
@@ -197,7 +222,7 @@
                 <constraint firstItem="Vzb-DH-e65" firstAttribute="leading" secondItem="2y8-a0-FV1" secondAttribute="trailing" constant="-4" id="6RI-h9-JNV"/>
                 <constraint firstItem="Vzb-DH-e65" firstAttribute="leading" secondItem="2y8-a0-FV1" secondAttribute="trailing" constant="-4" id="8kK-DH-fP6"/>
                 <constraint firstItem="2y8-a0-FV1" firstAttribute="leading" secondItem="cYH-nJ-CJY" secondAttribute="trailing" constant="-1" id="9IY-VE-aQN"/>
-                <constraint firstItem="fYb-TW-Wpn" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="264" id="9LX-Lj-BEZ"/>
+                <constraint firstItem="fYb-TW-Wpn" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="305" id="9LX-Lj-BEZ"/>
                 <constraint firstItem="Nl4-JD-v9o" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="16" id="9zA-bY-0TS"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="fYb-TW-Wpn" secondAttribute="bottom" id="Ulp-fH-AlR"/>
                 <constraint firstItem="23C-ay-5WQ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="VT8-q1-4qh"/>
