--- a/StockAnalysis/Exchange/ChargeAddressViewController.xib
+++ b/StockAnalysis/Exchange/ChargeAddressViewController.xib
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,8 +19,105 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ycj-ZR-AhD">
+                    <rect key="frame" x="0.0" y="39" width="375" height="45"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZuV-FD-8mh">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tl7-mF-mID">
+                            <rect key="frame" x="28" y="12" width="35" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="8DE-Of-lGL"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期货" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OBm-V7-q2I">
+                            <rect key="frame" x="259" y="12" width="35" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="hj5-oW-lBD"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="4ro-uG-bds">
+                            <rect key="frame" x="330" y="7" width="18" height="31"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="31" id="9Ri-7b-65f"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="4ro-uG-bds" secondAttribute="trailing" constant="27" id="5us-bb-7KC"/>
+                        <constraint firstAttribute="height" constant="45" id="BMA-7K-AIZ"/>
+                        <constraint firstAttribute="bottom" secondItem="ZuV-FD-8mh" secondAttribute="bottom" id="CDF-QA-DCA"/>
+                        <constraint firstItem="4ro-uG-bds" firstAttribute="centerY" secondItem="ycj-ZR-AhD" secondAttribute="centerY" id="GfQ-Yr-iYI"/>
+                        <constraint firstItem="ZuV-FD-8mh" firstAttribute="leading" secondItem="ycj-ZR-AhD" secondAttribute="leading" id="RL5-PT-5V8"/>
+                        <constraint firstAttribute="trailing" secondItem="OBm-V7-q2I" secondAttribute="trailing" constant="81" id="RSF-6K-3SW"/>
+                        <constraint firstItem="OBm-V7-q2I" firstAttribute="centerY" secondItem="ycj-ZR-AhD" secondAttribute="centerY" id="TOP-sW-07b"/>
+                        <constraint firstItem="ZuV-FD-8mh" firstAttribute="top" secondItem="ycj-ZR-AhD" secondAttribute="top" id="c40-xm-ZLX"/>
+                        <constraint firstItem="Tl7-mF-mID" firstAttribute="centerY" secondItem="ycj-ZR-AhD" secondAttribute="centerY" id="ckg-bL-zI5"/>
+                        <constraint firstItem="Tl7-mF-mID" firstAttribute="leading" secondItem="ycj-ZR-AhD" secondAttribute="leading" constant="28" id="fyL-uc-gvM"/>
+                        <constraint firstAttribute="trailing" secondItem="ZuV-FD-8mh" secondAttribute="trailing" id="mjm-f2-z6K"/>
+                    </constraints>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J0E-lj-3QT">
+                    <rect key="frame" x="82" y="100" width="211" height="163"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="211" id="xsL-J7-aeD"/>
+                        <constraint firstAttribute="height" constant="163" id="yF0-gJ-5UV"/>
+                    </constraints>
+                </imageView>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="1234567894561231231231231231231245435415461334313" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="INc-bI-xjU">
+                    <rect key="frame" x="16" y="271" width="343" height="95"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="95" id="aCC-V7-D3J"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W5R-6h-qDz">
+                    <rect key="frame" x="77.5" y="405" width="220" height="43"/>
+                    <color key="backgroundColor" red="0.95686274509803926" green="0.72549019607843135" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="220" id="Wgk-xW-obz"/>
+                        <constraint firstAttribute="height" constant="43" id="fvR-bH-VpJ"/>
+                    </constraints>
+                    <state key="normal" title="复制地址">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="20"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </button>
+            </subviews>
+            <color key="backgroundColor" red="0.98683822336535765" green="0.98683822336535765" blue="0.98683822336535765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="J0E-lj-3QT" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="2Ir-Wi-zXN"/>
+                <constraint firstItem="INc-bI-xjU" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="16" id="6a4-7O-8UV"/>
+                <constraint firstItem="W5R-6h-qDz" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="EqP-Zd-LUy"/>
+                <constraint firstItem="J0E-lj-3QT" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="80" id="J6H-Es-TvI"/>
+                <constraint firstItem="INc-bI-xjU" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="251" id="Kfg-d2-igF"/>
+                <constraint firstItem="ycj-ZR-AhD" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="19" id="UWG-dO-Ccg"/>
+                <constraint firstItem="W5R-6h-qDz" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="385" id="bT5-hd-nHF"/>
+                <constraint firstItem="INc-bI-xjU" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="cCd-P5-yd4"/>
+                <constraint firstItem="ycj-ZR-AhD" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="xGa-E2-3zB"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="ycj-ZR-AhD" secondAttribute="trailing" id="xUr-pE-hlt"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="Page next" width="18" height="31"/>
+    </resources>
 </document>
