--- a/StockAnalysis/Exchange/ChargeRecordTableViewCell.xib
+++ b/StockAnalysis/Exchange/ChargeRecordTableViewCell.xib
@@ -1,21 +1,118 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ChargeRecordTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" userLabel="chargecell" customClass="ChargeRecordTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="473" height="110"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="473" height="109.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期货1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qqZ-y8-DA4">
+                        <rect key="frame" x="20" y="17" width="55" height="27"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="27" id="ci9-Y3-zsL"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="普通充值" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dh5-05-Gf5">
+                        <rect key="frame" x="391" y="21" width="62" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="cZC-gN-4xG"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="1" green="0.8862745098" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数量" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D2v-Yo-cke">
+                        <rect key="frame" x="20" y="60" width="27" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="gCf-ug-N3i"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.00000000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="56Y-HL-98r">
+                        <rect key="frame" x="20" y="78" width="74" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="rD9-72-7tW"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="状态" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kH4-9y-nwd">
+                        <rect key="frame" x="223" y="58" width="27" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="Tmq-wR-xMM"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已完成" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRD-be-vdk">
+                        <rect key="frame" x="216.5" y="78" width="40" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="xNL-OO-Xhu"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日期" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zL4-Yj-6PN">
+                        <rect key="frame" x="426" y="55" width="27" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="Nnx-Yz-vaO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00：37   21/5" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1b9-JR-eZP">
+                        <rect key="frame" x="371" y="76" width="82" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="GEl-JA-GFQ"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="1b9-JR-eZP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="76" id="6qQ-69-cMU"/>
+                    <constraint firstItem="56Y-HL-98r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="78" id="Hlm-IL-mjN"/>
+                    <constraint firstItem="D2v-Yo-cke" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="60" id="Hqb-EE-ASF"/>
+                    <constraint firstItem="Dh5-05-Gf5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="K1s-kz-rxh"/>
+                    <constraint firstItem="qqZ-y8-DA4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="MrL-TN-gxN"/>
+                    <constraint firstAttribute="trailing" secondItem="Dh5-05-Gf5" secondAttribute="trailing" constant="20" id="PN9-ec-V2V"/>
+                    <constraint firstAttribute="trailing" secondItem="zL4-Yj-6PN" secondAttribute="trailing" constant="20" id="Ro9-4D-2lf"/>
+                    <constraint firstItem="D2v-Yo-cke" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="cpz-g7-nNo"/>
+                    <constraint firstItem="kH4-9y-nwd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="58" id="h8Q-Tw-fTE"/>
+                    <constraint firstItem="56Y-HL-98r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="i5S-pF-Q84"/>
+                    <constraint firstItem="qRD-be-vdk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="78" id="k8d-MW-3QV"/>
+                    <constraint firstItem="zL4-Yj-6PN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="55" id="pD0-pj-nmN"/>
+                    <constraint firstItem="kH4-9y-nwd" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="qIV-Wm-m8K"/>
+                    <constraint firstAttribute="trailing" secondItem="1b9-JR-eZP" secondAttribute="trailing" constant="20" id="qTR-2F-Qfa"/>
+                    <constraint firstItem="qRD-be-vdk" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="xMP-Ry-5QY"/>
+                    <constraint firstItem="qqZ-y8-DA4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="yWu-9m-ayE"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <point key="canvasLocation" x="101.5" y="85"/>
         </tableViewCell>
     </objects>
 </document>
