--- a/StockAnalysis/Exchange/ChargeViewController.xib
+++ b/StockAnalysis/Exchange/ChargeViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChargeViewController">
             <connections>
+                <outlet property="selectTable" destination="2Wz-EL-gyo" id="Kvb-Lc-BN1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
